turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:19: error: type mismatch;
 found   : Unit
 required: Int
		var i:Int = indice(colors, getCouleurSol())
                                  ^